<resources>
    <string name="app_name">Android  Priogramming book 01</string>

    <string name="question_text">404 Not Found?</string>
    <string name="true_button">Yes</string>
    <string name="false_button">No</string>
    <string name="correct_answer_toast">You answered correctly</string>
    <string name="incorrect_answer_toast">The correct answer should be the other one</string>
    <string name="next_button">Next</string>
    <string name="next_button_desc">Next Question</string>
    <string name="previous_button">Prev</string>
    <string name="previous_button_desc">Previous Question</string>
    <string name="quiz_complete_toast">You scored</string>
    <string name="quiz_complete_toast_pt2">with</string>
    <string name="quiz_complete_toast_pt3">answer reveal</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest riverin the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    <string name="cheat_warning">Be a good boy and don\'t cheat</string>
    <string name="show_answer_button">Reveal Answer</string>
    <string name="appended_cheated_warning">You cheated!!</string>
    <string name="show_answer_textView_text">The answer is </string>

</resources>
